--- a/standard.css
+++ b/standard.css
@@ -18,3 +18,8 @@ h1 {
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+#caption-2 {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
